# intro-to-flask

./: README.md  app.py  pyproject.toml
templates/: home.html  jobitem.html
